--- a/.gitignore
+++ b/.gitignore
@@ -39,3 +39,14 @@ gradle-app.setting
 ##############################
 .vscode/
 .code-workspace
+!.vscode/settings.json
+!.vscode/tasks.json
+!.vscode/launch.json
+!.vscode/extensions.json
+!.vscode/*.code-snippets
+
+# Local History for Visual Studio Code
+.history/
+
+# Built Visual Studio Code Extensions
+*.vsix
