--- a/restapi_postgres/src/main/resources/application.properties
+++ b/restapi_postgres/src/main/resources/application.properties
@@ -4,4 +4,7 @@ spring.datasource.username=admin
 spring.datasource.password=admin
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.datasource.driver-class-name=org.postgresql.Driver
-spring.jpa.show-sql: true
+#spring.jpa.show-sql: true
+spring.jackson.serialization.fail-on-empty-beans=false
+#Gainekoak balio du gure Objetuak serializatzeko eta
+# deserializatzeko JSON-etatik. Adibidez (Langilea)
