--- a/consumerestapi/src/main/resources/application.properties
+++ b/consumerestapi/src/main/resources/application.properties
@@ -1,4 +1,3 @@
 server.port=9000
 spring.application.name=consume-api
-spring.data.mongodb.uri=mongodb://192.168.65.123:27017
-#27017 portua mongo
+spring.data.mongodb.uri=mongodb://localhost
