--- a/consumerestapi/pom.xml
+++ b/consumerestapi/pom.xml
@@ -42,6 +42,25 @@
 			<artifactId>mongodb-driver-sync</artifactId>
 			<version>${mongodb.version}</version>
 		</dependency>
+		<!--WebClient -->
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-webflux</artifactId>
+		</dependency>
+
+		<!--MongoDB -->
+		<dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-devtools</artifactId>
+            <scope>runtime</scope>
+            <optional>true</optional>
+        </dependency>
+		<!--For Getters/Setters on models-->
+		<dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <optional>true</optional>
+        </dependency>
 
 	</dependencies>
 
