--- a/consumerestapi/src/main/resources/application.properties
+++ b/consumerestapi/src/main/resources/application.properties
@@ -1,3 +1,3 @@
 server.port=9000
 spring.application.name=consume-api
-spring.data.mongodb.uri=mongodb://localhost
+spring.data.mongodb.uri=mongodb://192.168.65.123
