--- a/consumerestapi/pom.xml
+++ b/consumerestapi/pom.xml
@@ -39,8 +39,8 @@
 		</dependency>
 		<dependency>
 			<groupId>org.mongodb</groupId>
-			<artifactId>mongo-java-driver</artifactId>
-			<version>3.12.11</version>
+			<artifactId>mongodb-driver-sync</artifactId>
+			<version>${mongodb.version}</version>
 		</dependency>
 		<!--WebClient -->
 		<dependency>
@@ -55,12 +55,6 @@
             <scope>runtime</scope>
             <optional>true</optional>
         </dependency>
-		<!-- https://mvnrepository.com/artifact/org.springframework.data/spring-data-mongodb -->
-		<dependency>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-data-mongodb</artifactId>
-		</dependency>
-
 		<!--For Getters/Setters on models-->
 		<dependency>
             <groupId>org.projectlombok</groupId>
