--- a/consumerestapi/pom.xml
+++ b/consumerestapi/pom.xml
@@ -39,8 +39,8 @@
 		</dependency>
 		<dependency>
 			<groupId>org.mongodb</groupId>
-			<artifactId>mongodb-driver-sync</artifactId>
-			<version>${mongodb.version}</version>
+			<artifactId>mongo-java-driver</artifactId>
+			<version>3.12.11</version>
 		</dependency>
 		<!--WebClient -->
 		<dependency>
@@ -55,11 +55,26 @@
             <scope>runtime</scope>
             <optional>true</optional>
         </dependency>
+		<dependency>
+			<groupId>org.glassfish</groupId>
+			<artifactId>javax.json</artifactId>
+			<version>1.1.4</version>
+		</dependency>
 		<!--For Getters/Setters on models-->
 		<dependency>
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
             <optional>true</optional>
+        </dependency>
+		<dependency>
+			<groupId>com.fasterxml.jackson.core</groupId>
+			<artifactId>jackson-databind</artifactId>
+			<version>2.13.3</version>
+		</dependency>
+		<dependency>
+            <groupId>org.json</groupId>
+            <artifactId>json</artifactId>
+            <version>20220924</version>
         </dependency>
 
 	</dependencies>
