--- a/apirestmongoconsume/pom.xml
+++ b/apirestmongoconsume/pom.xml
@@ -58,7 +58,14 @@
       <artifactId>json</artifactId>
       <version>20220924</version>
     </dependency>
-    
+    <!--Log4j-->
+    <!-- https://mvnrepository.com/artifact/log4j/log4j -->
+    <dependency>
+      <groupId>log4j</groupId>
+      <artifactId>log4j</artifactId>
+      <version>1.2.17</version>
+    </dependency>
+
   </dependencies>
 
   <build>
