--- a/apirestmongoconsume/src/main/resources/log4j.properties
+++ b/apirestmongoconsume/src/main/resources/log4j.properties
@@ -1,5 +1,5 @@
 # Define the root logger with file appender
-log4j.rootLogger=DEBUG, file
+log4j.rootLogger=DEBUG, file, console
 
 # Define the file appender
 log4j.appender.file=org.apache.log4j.RollingFileAppender
@@ -8,3 +8,8 @@ log4j.appender.file.MaxFileSize=10MB
 log4j.appender.file.MaxBackupIndex=10
 log4j.appender.file.layout=org.apache.log4j.PatternLayout
 log4j.appender.file.layout.ConversionPattern=%d{yyyy-MM-dd HH:mm:ss} %-5p %c{1}:%L - %m%n
+
+# Define the console appender
+log4j.appender.console=org.apache.log4j.ConsoleAppender
+log4j.appender.console.layout=org.apache.log4j.PatternLayout
+log4j.appender.console.layout.ConversionPattern=%d{yyyy-MM-dd HH:mm:ss} %-5p %c{1}:%L - %m%n
