--- a/ErronkaMongoUmeak/pom.xml
+++ b/ErronkaMongoUmeak/pom.xml
@@ -61,7 +61,11 @@
             <artifactId>jakarta.xml.bind-api</artifactId>
             <version>4.0.0</version>
         </dependency>
-
+        <dependency>
+            <groupId>javax.xml.bind</groupId>
+            <artifactId>jaxb-api</artifactId>
+            <version>2.3.1</version>
+        </dependency>
 
 
     </dependencies>
