--- a/apirestmongoconsume/pom.xml
+++ b/apirestmongoconsume/pom.xml
@@ -12,7 +12,7 @@
   <name>apirestmongoconsume</name>
 
   <properties>
-    <project.build.sourceEncoding>UTF</project.build.sourceEncoding>
+    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <maven.compiler.source>17</maven.compiler.source>
     <maven.compiler.target>17</maven.compiler.target>
     <java.version>17</java.version>
@@ -51,7 +51,7 @@
     <dependency>
       <groupId>com.fasterxml.jackson.core</groupId>
       <artifactId>jackson-databind</artifactId>
-      <version>2.13.3</version>
+      <version>2.14.2</version>
     </dependency>
     <dependency>
       <groupId>org.json</groupId>
@@ -94,6 +94,14 @@
         <plugin>
           <artifactId>maven-jar-plugin</artifactId>
           <version>3.0.2</version>
+          <configuration>
+            <archive>
+              <manifest>
+                <addClasspath>true</addClasspath>
+                <mainClass>dambi.ConsumerestapiApplication</mainClass>
+              </manifest>
+            </archive>
+          </configuration>
         </plugin>
         <plugin>
           <artifactId>maven-install-plugin</artifactId>
