--- a/apirestmongoconsume/pom.xml
+++ b/apirestmongoconsume/pom.xml
@@ -16,6 +16,7 @@
     <maven.compiler.source>17</maven.compiler.source>
     <maven.compiler.target>17</maven.compiler.target>
     <java.version>17</java.version>
+     <exec.cleanupDaemonThreads>false</exec.cleanupDaemonThreads> <!--Delete mvn exec:java errors-->
   </properties>
 
   <dependencies>
@@ -121,6 +122,15 @@
           <artifactId>maven-project-info-reports-plugin</artifactId>
           <version>3.0.0</version>
         </plugin>
+        <!--Exec plugin-->
+        <plugin>
+          <groupId>org.codehaus.mojo</groupId>
+          <artifactId>exec-maven-plugin</artifactId>
+          <version>1.6.0</version>
+          <configuration>
+            <mainClass>dambi.ConsumerestapiApplication</mainClass>
+          </configuration>
+        </plugin> 
       </plugins>
     </pluginManagement>
   </build>
